fixed issue with vibration report